--- a/projeto6/pages/dia2.html
+++ b/projeto6/pages/dia2.html
@@ -29,7 +29,9 @@
                 <li>Almoço em Zaanse Schans, com pratos típicos como haring (arenque cru) ou bitterballen (bolinhos fritos de carne</li><br>
             </ul>
             <h3>Noite</h3>
-            <ul>Retorne a Amsterdã e faça um jantar em um restaurante com vista para os canais, como o Restaurant Greetje, para experimentar mais da culinária holandesa.</ul><br>   
+            <ul>
+                Retorne a Amsterdã e faça um jantar em um restaurante com vista para os canais, como o Restaurant Greetje, para experimentar mais da culinária holandesa.</ul>
+            </ul>
         </section>
         <footer>
             2024 Viagem aos Países Baixos
