--- a/projeto6/pages/dia2.html
+++ b/projeto6/pages/dia2.html
@@ -30,7 +30,7 @@
             </ul>
             <h3>Noite</h3>
             <ul>
-                Retorne a Amsterdã e faça um jantar em um restaurante com vista para os canais, como o Restaurant Greetje, para experimentar mais da culinária holandesa.</ul>
+                <li>Retorne a Amsterdã e faça um jantar em um restaurante com vista para os canais, como o Restaurant Greetje, para experimentar mais da culinária holandesa.</li><br>
             </ul>
         </section>
         <footer>
